--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
 </body>
 <footer>
   <div class="footer-content">
-    <p><img src="images/icons/instagram.png" class="icon" alt="Instagram"> @paradise_events_9</p>
+     <p>
+        <img src="images/icons/instagram.png" class="icon" alt="Instagram">
+        <a href="https://www.instagram.com/paradise_events_9?igsh=c2xkaGRzbTVqbGc2" target="_blank" style="color: white; text-decoration: none;">
+           @paradise_events_9
+        </a>
+     </p>
     <p><img src="images/icons/email.PNG" class="icon" alt="Email"> eventparadise07@gmail.com</p>
     <p><img src="images/icons/call.png" class="icon" alt="Phone"> 9130978883/ 8262900566</p>
     <p><img src="images/icons/location.PNG" class="icon" alt="Location"> Godown no.1, near Bajartal Maidan, Awhalwadi Road, Wagholi, Pune-412207</p>
