--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
            @paradise_events_9
         </a>
      </p>
-    <p><img src="images/icons/email.PNG" class="icon" alt="Email"> eventparadise07@gmail.com</p>
+     <p>
+       <img src="images/icons/email.PNG" class="icon" alt="Email">
+       <a href="mailto:eventparadise07@gmail.com" style="color: white; text-decoration: none;">
+        eventparadise07@gmail.com
+       </a>
+    </p>
     <p><img src="images/icons/call.png" class="icon" alt="Phone"> 9130978883/ 8262900566</p>
     <p><img src="images/icons/location.PNG" class="icon" alt="Location"> Godown no.1, near Bajartal Maidan, Awhalwadi Road, Wagholi, Pune-412207</p>
   </div>
